--- a/proverka.html
+++ b/proverka.html
@@ -233,7 +233,7 @@
     
     <div class="buttons-container">
     <button onclick="checkAnswers()">Праверыць адказы</button>
-    <button class="home-button" onclick="goToHome()">На галоўную</button>
+    <button class="home-button" href="home">На галоўную</button>
     </div>
     
     <div id="result" class="result" style="display: none;"></div>
